--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,20 @@ release/
 *.dot
 *.log
 *.ign
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Go workspace file
+go.work
